Bug 168721 - Fade in animation on grouped shapes not shown
Summary: Fade in animation on grouped shapes not shown
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
26.2.0.0 alpha0+ master
Hardware: All Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Object-Animations
  Show dependency treegraph
 
Reported: 2025-10-06 17:04 UTC by Aron Budea
Modified: 2025-11-13 05:58 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Sample ODP (10.33 KB, application/vnd.oasis.opendocument.presentation)
2025-10-06 17:04 UTC, Aron Budea
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Aron Budea 2025-10-06 17:04:08 UTC
Created attachment 203163 [details]
Sample ODP

The attached presentation consists of a simple grouped shape with fade-in animation on it.
Open it, and start slideshow.

=> Animation isn't shown, shapes just appear after a bit.

Observed with LO 26.2.0.0.alpha0+ (8ea8e254a3151f5390f3a10ff156fcaf8e7c5d5c) / Windows.
Not sure if it occurs on Linux, tentatively marking OS as All for now, until someone can confirm the opposite.

This is a regression from the following commit in 26.2:
https://git.libreoffice.org/core/commit/e7b460f9197a57360dd017481dc747170e6a729f
author		Noel Grandin <noel.grandin@collabora.co.uk>	Sat Aug 30 15:23:11 2025 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	Sat Aug 30 21:21:46 2025 +0200

BitmapEx->Bitmap in canvas
Comment 1 Aron Budea 2025-10-29 14:50:14 UTC
Okay in LO 26.2.0.0.alpha0+ (2595f031fa93c1eb89fb4dce6f337de9be813e15) / Ubuntu, marking as Windows only.
Comment 2 Commit Notification 2025-11-13 05:58:08 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/074bdd6962b61198cf82fe8394de1b3a6f6a66be

tdf#168721 Fade in animation on grouped shapes not shown

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.