include/vcl/rendercontext/DrawModeFlags.hxx
@@ -28,6 +28,8 @@ enum class DrawModeFlags : sal_uInt32
     BlackLine = 0x00000001,
     BlackFill = 0x00000002,
     BlackText = 0x00000004,
+    BlackBitmap = 0x00000008,
+    BlackGradient = 0x00000010,
     GrayLine = 0x00000020,
     GrayFill = 0x00000040,
     GrayText = 0x00000080,
@@ -36,6 +38,8 @@ enum class DrawModeFlags : sal_uInt32
     NoFill = 0x00000400,
     WhiteLine = 0x00000800,
     WhiteFill = 0x00001000,
+    WhiteText = 0x00002000,
+    WhiteBitmap = 0x00004000,
     WhiteGradient = 0x00008000,
     SettingsLine = 0x00010000,
     SettingsFill = 0x00020000,
@@ -46,7 +50,7 @@ enum class DrawModeFlags : sal_uInt32
 };
 namespace o3tl
 {
-template <> struct typed_flags<DrawModeFlags> : is_typed_flags<DrawModeFlags, 0x3f9fe7>
+template <> struct typed_flags<DrawModeFlags> : is_typed_flags<DrawModeFlags, 0x3fffff>
 {
 };
 }
